--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -25,7 +25,8 @@
       </button>
       <ul class="dropdown-menu">
           <li>
-            <a href="#">To Shopping List</a>
+            <a style="cursor:pointer;"
+            (click)="onAddToShoppingList()">To Shopping List</a>
           </li>
           <li><a href="#">Edit Recipe</a></li>
           <li><a href="#">Delete Recipe</a></li>
@@ -40,6 +41,10 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    Ingredients
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let ingredient of recipe._ingredients">
+        {{ ingredient.name }} - {{ingredient.amount}}
+      </li>
+    </ul>
   </div>
 </div>
